# Sales-Prediction

./: .gitignore  Dockerfile  Makefile  README.md  app.py  inference.py  main.py  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb
tests/: test_quick.py
